# hexorder

./: .editorconfig  .gitattributes  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  bacon.toml  cliff.toml  clippy.toml  deny.toml  lefthook.yml  mise.toml  rustfmt.toml  taplo.toml
.claude/: settings.json
.claude/agents/: cycle-agent.md  feature-lead.md  feature-worker.md  integration-tester.md  pitch-agent.md  plugin-lead.md  plugin-worker.md
.claude/hooks/: rustfmt.sh
.claude/skills/bet/: SKILL.md
.claude/skills/contract/: SKILL.md
.claude/skills/contracts/: SKILL.md
.claude/skills/cooldown/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/hex-bet/: SKILL.md
.claude/skills/hex-bisect/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  cycle.yml  feature.yml  pitch.yml  research.yml  tech-debt.yml
.github/workflows/: ci.yml
.specs/: brand.md  constitution.md  coordination.md  glossary.md  roadmap.md
.specs/contracts/: README.md  _template.md  cell.md  editor_ui.md  game_system.md  hex_grid.md  ontology.md  persistence.md  terrain.md
.specs/features/: _template_log.md  _template_spec.md
crates/hexorder-camera/: Cargo.toml
crates/hexorder-camera/src/: components.rs  lib.rs  tests.rs
crates/hexorder-cell/: Cargo.toml
crates/hexorder-cell/src/: lib.rs  systems.rs  tests.rs
crates/hexorder-contracts/: Cargo.toml
crates/hexorder-export/: Cargo.toml
crates/hexorder-export/src/: counter_sheet.rs  lib.rs  systems.rs  tests.rs
crates/hexorder-map-gen/: Cargo.toml
crates/hexorder-mechanic-ref/: Cargo.toml
crates/hexorder-persistence/: Cargo.toml
crates/hexorder-persistence/src/: lib.rs  storage.rs  systems.rs  tests.rs
crates/hexorder-rules-engine/: Cargo.toml
crates/hexorder-rules-engine/src/: lib.rs  systems.rs  tests.rs
crates/hexorder-scripting/: Cargo.toml
crates/hexorder-scripting/src/: lib.rs  lua_api.rs  systems.rs
crates/hexorder-sdk/: Cargo.toml
crates/hexorder-settings/: Cargo.toml
crates/hexorder-settings/src/: config.rs  lib.rs  tests.rs
crates/hexorder-simulation/: Cargo.toml
crates/hexorder-simulation/src/: events.rs  lib.rs  systems.rs  tests.rs
crates/hexorder-undo-redo/: Cargo.toml
crates/hexorder-undo-redo/src/: lib.rs  systems.rs
crates/hexorder-unit/: Cargo.toml
crates/hexorder-unit/src/: components.rs  lib.rs  systems.rs  tests.rs
docs/: architecture.md  bevy-egui-guide.md  bevy-guide.md  constitution.md  coordination.md  domain.md  git-guide.md  glossary.md  roadmap.md  shape-up-guide.md
docs/contracts/: README.md  _template.md  cell.md  editor-ui.md  game-system.md  game_system.md  hex-grid.md  map-gen.md  mechanic-reference.md  mechanics.md  persistence.md  settings.md  shortcuts.md  simulation.md  storage.md  system-sets.md  undo-redo.md  validation.md
docs/decisions/: 001-event-driven-communication.md  002-command-system-pattern.md  003-contracts-protocol.md  004-crate-extraction.md  005-simulation-primitives.md  README.md  template.md
docs/features/: _template_spec.md
docs/guides/: agent-ops.md  bevy-egui.md  bevy.md  contract.md  feature.md  git-guide.md  git.md  plugin.md  research.md  shape-up.md  skill.md  uat.md
docs/plans/: 2026-02-15-core-mechanics-design.md  2026-02-15-hex-grid-foundation-design.md  2026-02-15-hex-grid-foundation.md  2026-02-15-keyboard-shortcuts-design.md  2026-02-15-property-system-design.md  2026-02-15-property-system.md  2026-02-15-visual-polish-design.md  2026-02-15-workspace-lifecycle-design.md  2026-02-18-undo-redo.md  2026-02-21-editor-dock-polish-design.md  2026-02-21-map-gen-design.md  2026-02-21-map-gen-scope1.md  2026-02-21-scope4-tab-support-design.md  2026-02-21-scope4-tab-support-plan.md  2026-02-22-hex-edge-contract.md  2026-02-22-map-gen-scope5-ui.md  2026-02-24-async-dialog-migration-design.md  2026-02-24-async-dialog-migration-plan.md  2026-02-24-async-dialog-plan.md  2026-02-24-async-dialog-wrapper-design.md  2026-02-24-dirty-flag-tracking.md  2026-02-24-settings-infrastructure-design.md  2026-02-24-settings-infrastructure-plan.md  2026-02-25-coverage-95-design.md  2026-02-25-coverage-95-plan.md  2026-03-03-traces-of-victory-roadmap-design.md  2026-03-04-simulation-primitives-design.md  2026-03-04-simulation-primitives-plan.md  2026-03-07-design-experience-design.md  2026-03-07-design-experience-implementation.md
docs/research/: game-engines.md  games.md  hex-wargame-mechanics-survey.md  ui-architecture-survey.md
hexorder-contracts/: Cargo.toml
hexorder-contracts/src/: game_system.rs  hex_grid.rs  lib.rs  persistence.rs  settings.rs  undo_redo.rs
scripts/: cargo-env.sh
src/: macros.rs  main.rs
src/camera/: components.rs  mod.rs  systems.rs  tests.rs
src/cell/: components.rs  mod.rs  systems.rs  tests.rs
src/contracts/: editor_ui.rs  game_system.rs  hex_grid.rs  mechanic_reference.rs  mechanics.rs  mod.rs  ontology.rs  persistence.rs  shortcuts.rs  storage.rs  undo_redo.rs  validation.rs
src/editor_ui/: actions.rs  components.rs  mod.rs  render_design.rs  render_ontology.rs  render_panels.rs  render_play.rs  render_rules.rs  systems.rs  tests.rs  ui_tests.rs
src/export/: counter_sheet.rs  hex_map.rs  mod.rs  systems.rs  tests.rs
src/game_system/: mod.rs  systems.rs  tests.rs
src/hex_grid/: algorithms.rs  components.rs  mod.rs  systems.rs  tests.rs
src/map_gen/: biome.rs  components.rs  heightmap.rs  mod.rs  systems.rs  tests.rs  ui.rs
src/mechanic_reference/: components.rs  mod.rs  systems.rs  tests.rs
src/ontology/: mod.rs  systems.rs  tests.rs
src/persistence/: async_dialog.rs  mod.rs  storage.rs  systems.rs  tests.rs
src/rules_engine/: mod.rs  systems.rs  tests.rs
src/scripting/: lua_api.rs  mod.rs  systems.rs  tests.rs
src/settings/: config.rs  mod.rs  systems.rs  tests.rs
src/shortcuts/: config.rs  mod.rs  systems.rs  tests.rs
src/simulation/: mod.rs  systems.rs  tests.rs
src/undo_redo/: mod.rs  systems.rs  tests.rs
src/unit/: components.rs  mod.rs  systems.rs  tests.rs
tests/: architecture.rs
(+121 files in other folders)
