[package]
name = "hexorder"
version = "0.3.0"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[features]
dev = [ "bevy/dynamic_linking" ]

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
hexx = "0.22"
uuid = { version = "1", features = [ "v4" ] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Treat all default clippy warnings as errors
all = { level = "deny", priority = -1 }
# Enable pedantic lints for higher code quality
pedantic = { level = "warn", priority = -1 }
# Bevy systems take ownership of Res<T>, Query<>, etc.
needless_pass_by_value = "allow"
# camera::CameraPlugin is idiomatic in Bevy
module_name_repetitions = "allow"
# Not a library — no public API docs needed
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Common in game math (f32 <-> usize conversions)
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Exact float comparison is acceptable in tests with known values
float_cmp = "allow"
# Architecture test functions are necessarily long
too_many_lines = "allow"
# Fields named after their type are clear in Bevy event structs
struct_field_names = "allow"
# &Option<Res<T>> is idiomatic in Bevy UI helper functions
ref_option = "allow"

# Enable optimizations for dependencies in dev builds for playable frame rates
[profile.dev.package."*"]
opt-level = 2

# Release profile for distribution builds
[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1
