[workspace]
members = [ "crates/hexorder-contracts", "crates/hexorder-sdk", "crates/hexorder-map-gen", "crates/hexorder-mechanic-ref", "crates/hexorder-camera", "crates/hexorder-export", "crates/hexorder-settings", "crates/hexorder-undo-redo", "crates/hexorder-scripting" ]
default-members = [ "." ]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
bevy_egui = "0.39"
hexx = { version = "0.22", features = [ "algorithms" ] }
ron = "0.12"
serde = { version = "1", features = [ "derive" ] }
uuid = { version = "1", features = [ "v4" ] }
hexorder-camera = { path = "crates/hexorder-camera" }
hexorder-contracts = { path = "crates/hexorder-contracts" }
hexorder-export = { path = "crates/hexorder-export" }
hexorder-map-gen = { path = "crates/hexorder-map-gen" }
hexorder-mechanic-ref = { path = "crates/hexorder-mechanic-ref" }
hexorder-scripting = { path = "crates/hexorder-scripting" }
hexorder-sdk = { path = "crates/hexorder-sdk" }
hexorder-settings = { path = "crates/hexorder-settings" }
hexorder-undo-redo = { path = "crates/hexorder-undo-redo" }
noise = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Treat all default clippy warnings as errors
all = { level = "deny", priority = -1 }
# Enable pedantic lints for higher code quality
pedantic = { level = "warn", priority = -1 }
# Bevy systems take ownership of Res<T>, Query<>, etc.
needless_pass_by_value = "allow"
# camera::CameraPlugin is idiomatic in Bevy
module_name_repetitions = "allow"
# Not a library — no public API docs needed
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Common in game math (f32 <-> usize conversions)
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Exact float comparison is acceptable in tests with known values
float_cmp = "allow"
# Architecture test functions are necessarily long
too_many_lines = "allow"
# Fields named after their type are clear in Bevy event structs
struct_field_names = "allow"
# &Option<Res<T>> is idiomatic in Bevy UI helper functions
ref_option = "allow"
# Prevent debug macros from reaching commits
dbg_macro = "deny"

[package]
name = "hexorder"
version = "0.16.0-crate-extraction"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[features]
dev = [ "bevy/dynamic_linking" ]
xdg = [ "dep:dirs" ]
macos = [ "dep:dirs" ]
inspector = [  ]
macos-app = [ "hexorder-settings/macos-app" ]

[dependencies]
hexorder-camera = { workspace = true }
hexorder-contracts = { workspace = true }
hexorder-export = { workspace = true }
hexorder-map-gen = { workspace = true }
hexorder-mechanic-ref = { workspace = true }
hexorder-scripting = { workspace = true }
hexorder-sdk = { workspace = true }
hexorder-settings = { workspace = true }
hexorder-undo-redo = { workspace = true }
dirs = { version = "6", optional = true }
bevy = { workspace = true, features = [
  "default_app",
  "default_platform",
  "3d_bevy_render",
  "ui_api",
  "ui_bevy_render",
  "scene",
  "picking",
] }
bevy_egui = { workspace = true }
egui_dock = { version = "0.18", features = [ "serde" ] }
hexx = { workspace = true }
noise = { workspace = true }
rfd = "0.15"
ron = { workspace = true }
serde = { workspace = true }
sublime_fuzzy = "0.7"
toml = "0.8"
printpdf = "0.9"
uuid = { workspace = true }

[dev-dependencies]
egui_kittest = "0.33"
tempfile = "3"

[lints]
workspace = true

# Faster incremental builds on macOS (splits DWARF debug info)
[profile.dev]
split-debuginfo = "unpacked"

# Prevent build scripts and proc-macros from compiling twice
[profile.dev.build-override]
incremental = true
codegen-units = 16

# Enable optimizations for dependencies in dev builds for playable frame rates
[profile.dev.package."*"]
opt-level = 2

# Release profile for distribution builds
[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1

# Profiling profile — full debug info for Tracy/samply, no LTO for faster builds
[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16
