[package]
name = "hexorder-contracts"
version = "0.13.0-contracts"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_state",
  "bevy_log",
  "bevy_window",
  "3d_bevy_render",
] }
bevy_egui = { workspace = true }
hexx = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
