[package]
name = "hexorder-simulation"
version = "0.18.0-wave3-extraction"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
hexorder-contracts = { workspace = true }
hexorder-sdk = { workspace = true }
bevy = { workspace = true, default-features = false, features = [
  "bevy_state",
  "bevy_log",
] }

[dev-dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_state",
  "bevy_log",
] }

[lints]
workspace = true
